Added models in and some basic forms

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CanadaRally</title>
+    <title>{% block title %}{% endblock %}</title>
     {% block css %}{% endblock %}
     {% block js %}{% endblock %}
 </head>
